--- a/ScribbleSprinter/ScribbleSprinter/Components/App.razor
+++ b/ScribbleSprinter/ScribbleSprinter/Components/App.razor
@@ -16,7 +16,11 @@
     <Routes @rendermode="InteractiveAuto" />
     <script src="_framework/blazor.web.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
-
+    <!-- jsDelivr  -->
+    <script src="https://cdn.jsdelivr.net/npm/fireworks-js@2.x/dist/index.umd.js"></script>
+    <!-- UNPKG -->
+    <script src="https://unpkg.com/fireworks-js@2.x/dist/index.umd.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
