--- a/ScribbleSprinter/ScribbleSprinter.Client/Pages/Sprint.razor
+++ b/ScribbleSprinter/ScribbleSprinter.Client/Pages/Sprint.razor
@@ -1,10 +1,5 @@
 ﻿@inherits ComponentViewModelBase<SprintViewModel>
-<p>
-    @foreach (var item in SavedTexts ?? [])
-    {
-        <span>@item</span>
-    }
-</p>
+<p>@SavedTexts</p>
 <MudProgressLinear Color="Color.Secondary" Value="@Vm.Value" Class="my-7" Min="0" Max="@Vm.TimeLimit" />
 <MudTextField T="string" Label="Start typing to start..." Variant="Variant.Outlined" @bind-Value="@Vm.Text" Lines="10" Immediate=true AutoFocus=true />
 
@@ -16,12 +11,20 @@
     public Action? OnGameOver { get; set; }
 
     [Parameter]
-    public IEnumerable<string>? SavedTexts { get; set; }
+    public string? SavedTexts { get; set; }
+
+    [Parameter]
+    public int SprintSeconds { get; set; } = 60;
+
+    [Parameter]
+    public int TypingSpeed { get; set; } = 1000;
 
     protected override void OnInitialized()
     {
         Vm.OnSprintCompleted = OnSprintCompleted;
         Vm.OnGameOver = OnGameOver;
+        Vm.TypingSpeed = TypingSpeed;
+        Vm.TimeLimit = SprintSeconds;
         base.OnInitialized();
     }
 }
