--- a/ScribbleSprinter/ScribbleSprinter.Client/Pages/Scribble.razor
+++ b/ScribbleSprinter/ScribbleSprinter.Client/Pages/Scribble.razor
@@ -6,14 +6,26 @@
 @if (Vm.GameState == States.Sprint)
 {
     <Sprint OnGameOver="() => Vm.SetState(States.GameOver)"
-            OnSprintCompleted="s => {Vm.SavedTexts.Add(s); Vm.SetState(States.SprintCompleted); }"
-            SavedTexts="Vm.SavedTexts"></Sprint>
+            OnSprintCompleted="s => {Vm.SavedTexts += s; Vm.SetState(States.SprintCompleted); }"
+            SavedTexts="@Vm.SavedTexts"
+            SprintSeconds="@SprintSeconds"
+            TypingSpeed="@TypingSpeed"></Sprint>
 }
 else if (Vm.GameState == States.GameOver)
 {
-    <GameOver OnReset="() => Vm.SetState(States.Sprint)" SavedTexts="Vm.SavedTexts"></GameOver>
+    <GameOver OnReset="() => Vm.SetState(States.Sprint)" SavedTexts="@Vm.SavedTexts"></GameOver>
 }
 else if (Vm.GameState == States.SprintCompleted)
 {
-    <SprintCompleted OnContinue="() => Vm.SetState(States.Sprint)" SavedTexts="Vm.SavedTexts"></SprintCompleted>
+    <SprintCompleted OnContinue="() => Vm.SetState(States.Sprint)" SavedTexts="@Vm.SavedTexts"></SprintCompleted>
+}
+
+@code {
+    [SupplyParameterFromQuery]
+    [Parameter]
+    public int SprintSeconds { get; set; } = 60;
+    [SupplyParameterFromQuery]
+    [Parameter]
+    public int TypingSpeed { get; set; } = 1000;
+
 }
