fixed minor color issues

--- a/ScribbleSprinter/ScribbleSprinter.Client/Layout/MainLayout.razor
+++ b/ScribbleSprinter/ScribbleSprinter.Client/Layout/MainLayout.razor
@@ -5,7 +5,7 @@
 
 <MudLayout>
     <MudAppBar>
-        Scribble Sprinter
+        <a href="/" style="color:white">Scribble Sprinter</a>
     </MudAppBar>
     <MudMainContent>
         @Body
