--- a/ScribbleSprinter/ScribbleSprinter.Client/_Imports.razor
+++ b/ScribbleSprinter/ScribbleSprinter.Client/_Imports.razor
@@ -7,5 +7,6 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using ScribbleSprinter.Client
+@using ScribbleSprinter.Client.Pages.Game
 @using MudBlazor
 @using ScribbleSprinter.Client.ViewModels
